--- a/index.html
+++ b/index.html
@@ -225,8 +225,11 @@
 
 <div id="marks"><strong>Marks:</strong> <span id="markList">(none)</span></div>
 
-<div style="text-align: center; margin: 10px 0;">
+<div style="display: flex; justify-content: center; align-items: center; gap: 15px; margin: 10px 0; flex-wrap: wrap;">
   <button onclick="toggleKeyboardHelp()" style="background: #e3f2fd; border: 1px solid #2196f3; padding: 8px 16px; border-radius: 4px; font-size: 14px;">⌨️ Keyboard Shortcuts</button>
+  <a href="https://github.com/cydu-cloud/youtube-video-analyzer#readme" target="_blank" style="color: #007bff; text-decoration: none; font-size: 14px; padding: 8px 16px; border: 1px solid #007bff; border-radius: 4px; background: #f8f9ff;">
+    📖 Complete Documentation
+  </a>
 </div>
 
 <div id="keyboardHelp" style="display: none; background: #f8f9fa; border: 1px solid #dee2e6; border-radius: 8px; padding: 15px; margin: 10px 0; font-size: 14px;">
